objects/nitro__Nitro_Custom_Tabs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>If you want to add Tabs to Nitro for Salesforce, add entries here.</description>
    <fields>
        <fullName>nitro__Page_URL__c</fullName>
        <description>The full URL to the page that you want to load. ie: https://nitro.na12.visual.force.com/apex/TestPage</description>
        <inlineHelpText>The full URL to the page that you want to load. ie: https://nitro.na12.visual.force.com/apex/TestPage</inlineHelpText>
        <label>Page URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Tab_Label__c</fullName>
        <description>The text that appears on the tab.</description>
        <inlineHelpText>The text that appears on the tab.</inlineHelpText>
        <label>Tab Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Tab_Name__c</fullName>
        <description>A unique name for this tab. Can only use alphanumeric characters and underscores.</description>
        <inlineHelpText>A unique name for this tab. Can only use alphanumeric characters and underscores.</inlineHelpText>
        <label>Tab Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Nitro Custom Tabs</label>
</CustomObject>